# boast

./: Cargo.toml  LICENSE  babak.review.txt  biod.py  boast.py  build_latex.bat  readme.md  references.bib
examples/: for_performance_regression_testing.rs  normal.rs
latex-src/: 0_main.tex  1_introduction.tex  2_solution.tex  3_methodology.tex  4_results.tex  5_discussion.tex  6_conclusion.tex  7_appendix.tex
latex-src/visuals/: bias_no_correlation_chart.tex  estimate.tex  flowchart.tex  p_fail_confidence.tex
results/: bias_experiment1.csv  bias_experiment2.csv  bias_experiment3.csv  estimate_experiment1_common.csv  estimate_experiment1_rare.csv  estimate_experiment1_very_common.csv  p_fail_experiment1.csv  p_fail_experiment3_bigp.csv  p_fail_experiment3_goodp.csv  p_fail_experiment3_smallp.csv
rust_impl/: Cargo.toml  readme.md  test.json
rust_impl/boast/: Cargo.toml  LICENSE  readme.md
rust_impl/boast/src/: data_src.rs  lib.rs  options.rs  runner.rs  state.rs
rust_impl/boast_macros/: Cargo.toml
rust_impl/boast_macros/src/: args.rs  lib.rs  test_fn.rs
rust_impl/src/: data_src.rs  lib.rs  options.rs  runner.rs  state.rs
src/: experiments.rs  main.rs
src/experiments/: estimate.rs  p_fail.rs  prior_strength.rs
tmp/: 0_main.aux  0_main.bbl  0_main.blg  0_main.lof  0_main.out
